--- a/index.html
+++ b/index.html
@@ -16,22 +16,18 @@
 <body>
   <h1 class="text-center mt-5 display-4 text-primary">Prueba Tecnica Unipanamericana</h1>
 
-  <form>
+  <form class="text-center mt-5">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Asunto">
     </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <div class="form-group">
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+        placeholder="Descripción del Mensaje"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
 
   <!-- Optional JavaScript -->
