Modificado index y enviar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h1 class="text-center mt-5 display-4 text-primary">Prueba Tecnica Unipanamericana</h1>
+  <h1 class="text-center mt-5 display-4 text-primary">MENSAJE</h1>
 
   <form method="POST" action="enviar.php" class="text-center mt-5">
     <div class="form-group">
@@ -45,8 +45,8 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">Prueba Técnica Unipanamericana -
+    <a href="https://mdbootstrap.com/"> Jorge Iván Hernández Hernández</a>
   </div>
   <!-- Copyright -->
 
