--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -10,43 +10,36 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Mensaje</title>
 </head>
 
 <body>
-  <h1 class="text-center mt-5 display-4 text-primary">MENSAJE</h1>
+  <div class="container">
+    <h1 class="text-center mt-5 display-4">MENSAJE</h1>
 
-  <form method="POST" action="enviar.php" class="text-center mt-5">
-    <div class="form-group">
-      <input type="text" class="form-control" name="nombre" placeholder="Nombre">
-    </div>
-    <div class="form-group">
-      <input type="text" class="form-control" name="asunto" placeholder="Asunto">
-    </div>
-    <div class="form-group">
-      <textarea class="form-control" name="mensaje" rows="3" placeholder="Descripción del Mensaje"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </form>
+    <form method="POST" action="enviar.php" class="text-center mt-5">
+      <div class="form-group">
+        <input type="text" class="form-control" name="nombre" placeholder="Nombre">
+      </div>
+      <div class="form-group">
+        <input type="text" class="form-control" name="asunto" placeholder="Asunto">
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" name="mensaje" rows="3" placeholder="Descripción del Mensaje"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </div>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
 </body>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">Prueba Técnica Unipanamericana -
-    <a href="https://mdbootstrap.com/"> Jorge Iván Hernández Hernández</a>
+    <a href="#" class="text-primary"> Jorge Iván Hernández Hernández</a>
   </div>
   <!-- Copyright -->
 
